2008-04-21  Lillian Angel  <langel@redhat.com>
	    Parag Nemade  <pnemade@redhat.com>

	Fixes #443360
	* patches/icedtea-fonts.patch: New patch to fix font paths.
	* Makefile.am: Added new patch to the list.
	* Makefile.in: Regenerated.

2008-04-21  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-lib64.patch: Fixed order of library paths on 64-bit.
	* generated/*: Regenerated.

2008-04-21  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* ChangeLog: Fixed a typo in my name.

2008-04-21  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/resources/about.jnlp: Use online signed
	about.jar.

2008-04-21  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* acinclude.m4 (ENABLE_FAST_BUILD): Removed.
	(ENABLE_OPTIMIZATIONS): New function.
	* configure.ac (ENABLE_FAST_BUILD): Removed call.
	(ENABLE_OPTIMIZATIONS): Added call.
	* Makefile.am [!ENABLE_OPTIMIZATIONS] (ICEDTEA_ENV): Set
	NO_OPTIMIZATIONS and CC_NO_OPT.
	(FAST_BUILD_PATCH): Removed.
	(ICEDTEA_PATCHES): Removed FAST_BUILD_PATCH.
	* Makefile.in, configure: Regenerated.
	* patches/icedtea-speed.patch: Removed.

2008-04-21  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* acinclude.m4 (SET_CORE_BUILD): Always set to true when building
	--with-cacao.
	* Makefile.in, aclocal.m4, configure: Regenerated.

2008-04-21  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* patches/icedtea-cacao.patch: Set the ARCH_DATA_MODEL correct for
	almost all architectures (I missed that when merging in the
	cacao-branch).

2008-04-17  Joshua Sumali  <jsumali@redhat.com>

	* configure: Regenerated.
	* configure.ac: Bump version number to 1.2.

2008-04-17  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/Launcher.java: Fix applet focusing bug.

2008-04-16  Keith Seitz  <keiths@redhat.com>

	* patches/icedtea-LCMS-setTagData.patch: New file.
	* patches/icedtea-color-createcontext.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Add above patches.
	* Makefile.in: Regenerated.
