@@ -1,6 +1,6 @@
 --- openjdkold/jdk/src/solaris/classes/sun/awt/fontconfigs/linux.fontconfig.Fedora.properties	2008-03-26 14:30:01.000000000 +0530
 +++ openjdk/jdk/src/solaris/classes/sun/awt/fontconfigs/linux.fontconfig.Fedora.properties	2008-04-21 11:21:49.000000000 +0530
-@@ -25,7 +25,7 @@
+@@ -25,134 +25,310 @@
  
  # Version
  
@@ -9,7 +9,339 @@
  version=1
  
  # Component Font Mappings
-@@ -165,24 +165,24 @@
+ 
+-dialog.plain.latin-1=DejaVu LGC Sans
++dialog.plain.latin-1=DejaVu Sans
+ dialog.plain.japanese-x0208=Sazanami Gothic
+ dialog.plain.korean=Baekmuk Gulim
+ dialog.plain.chinese-big5=AR PL ShanHeiSun Uni
+ dialog.plain.chinese-gb18030=AR PL ShanHeiSun Uni
++dialog.plain.bengali=Lohit Bengali
++dialog.plain.gujarati=Lohit Gujarati
++dialog.plain.hindi=Lohit Hindi
++dialog.plain.malayalam=Lohit Malayalam
++dialog.plain.oriya=Lohit Oriya
++dialog.plain.punjabi=Lohit Punjabi
++dialog.plain.tamil=Lohit Tamil
++dialog.plain.telugu=Lohit Telugu
++dialog.plain.sinhala=LKLUG
+ 
+-dialog.bold.latin-1=DejaVu LGC Sans Bold
++dialog.bold.latin-1=DejaVu Sans Bold
+ dialog.bold.japanese-x0208=Sazanami Gothic
+ dialog.bold.korean=Baekmuk Gulim
+ dialog.bold.chinese-big5=AR PL ShanHeiSun Uni
+ dialog.bold.chinese-gb18030=AR PL ShanHeiSun Uni
++dialog.bold.bengali=Lohit Bengali
++dialog.bold.gujarati=Lohit Gujarati
++dialog.bold.hindi=Lohit Hindi
++dialog.bold.malayalam=Lohit Malayalam
++dialog.bold.oriya=Lohit Oriya
++dialog.bold.punjabi=Lohit Punjabi
++dialog.bold.tamil=Lohit Tamil
++dialog.bold.telugu=Lohit Telugu
++dialog.bold.sinhala=LKLUG
+ 
+-dialog.italic.latin-1=DejaVu LGC Sans Oblique
++dialog.italic.latin-1=DejaVu Sans Oblique
+ dialog.italic.japanese-x0208=Sazanami Gothic
+ dialog.italic.korean=Baekmuk Gulim
+ dialog.italic.chinese-big5=AR PL ShanHeiSun Uni
+ dialog.italic.chinese-gb18030=AR PL ShanHeiSun Uni
++dialog.italic.bengali=Lohit Bengali
++dialog.italic.gujarati=Lohit Gujarati
++dialog.italic.hindi=Lohit Hindi
++dialog.italic.malayalam=Lohit Malayalam
++dialog.italic.oriya=Lohit Oriya
++dialog.italic.punjabi=Lohit Punjabi
++dialog.italic.tamil=Lohit Tamil
++dialog.italic.telugu=Lohit Telugu
++dialog.italic.sinhala=LKLUG
+ 
+-dialog.bolditalic.latin-1=DejaVu LGC Sans Bold Oblique
++dialog.bolditalic.latin-1=DejaVu Sans Bold Oblique
+ dialog.bolditalic.japanese-x0208=Sazanami Gothic
+ dialog.bolditalic.korean=Baekmuk Gulim
+ dialog.bolditalic.chinese-big5=AR PL ShanHeiSun Uni
+ dialog.bolditalic.chinese-gb18030=AR PL ShanHeiSun Uni
++dialog.bolditalic.bengali=Lohit Bengali
++dialog.bolditalic.gujarati=Lohit Gujarati
++dialog.bolditalic.hindi=Lohit Hindi
++dialog.bolditalic.malayalam=Lohit Malayalam
++dialog.bolditalic.oriya=Lohit Oriya
++dialog.bolditalic.punjabi=Lohit Punjabi
++dialog.bolditalic.tamil=Lohit Tamil
++dialog.bolditalic.telugu=Lohit Telugu
++dialog.bolditalic.sinhala=LKLUG
+ 
+-
+-sansserif.plain.latin-1=DejaVu LGC Sans
++sansserif.plain.latin-1=DejaVu Sans
+ sansserif.plain.japanese-x0208=Sazanami Gothic
+ sansserif.plain.korean=Baekmuk Gulim
+ sansserif.plain.chinese-big5=AR PL ShanHeiSun Uni
+ sansserif.plain.chinese-gb18030=AR PL ShanHeiSun Uni
++sansserif.plain.bengali=Lohit Bengali
++sansserif.plain.gujarati=Lohit Gujarati
++sansserif.plain.hindi=Lohit Hindi
++sansserif.plain.malayalam=Lohit Malayalam
++sansserif.plain.oriya=Lohit Oriya
++sansserif.plain.punjabi=Lohit Punjabi
++sansserif.plain.tamil=Lohit Tamil
++sansserif.plain.telugu=Lohit Telugu
++sansserif.plain.sinhala=LKLUG
+ 
+-sansserif.bold.latin-1=DejaVu LGC Sans Bold
++sansserif.bold.latin-1=DejaVu Sans Bold
+ sansserif.bold.japanese-x0208=Sazanami Gothic
+ sansserif.bold.korean=Baekmuk Gulim
+ sansserif.bold.chinese-big5=AR PL ShanHeiSun Uni
+ sansserif.bold.chinese-gb18030=AR PL ShanHeiSun Uni
++sansserif.bold.bengali=Lohit Bengali
++sansserif.bold.gujarati=Lohit Gujarati
++sansserif.bold.hindi=Lohit Hindi
++sansserif.bold.malayalam=Lohit Malayalam
++sansserif.bold.oriya=Lohit Oriya
++sansserif.bold.punjabi=Lohit Punjabi
++sansserif.bold.tamil=Lohit Tamil
++sansserif.bold.telugu=Lohit Telugu
++sansserif.bold.sinhala=LKLUG
+ 
+-sansserif.italic.latin-1=DejaVu LGC Sans Oblique
++sansserif.italic.latin-1=DejaVu Sans Oblique
+ sansserif.italic.japanese-x0208=Sazanami Gothic
+ sansserif.italic.korean=Baekmuk Gulim
+ sansserif.italic.chinese-big5=AR PL ShanHeiSun Uni
+ sansserif.italic.chinese-gb18030=AR PL ShanHeiSun Uni
++sansserif.italic.bengali=Lohit Bengali
++sansserif.italic.gujarati=Lohit Gujarati
++sansserif.italic.hindi=Lohit Hindi
++sansserif.italic.malayalam=Lohit Malayalam
++sansserif.italic.oriya=Lohit Oriya
++sansserif.italic.punjabi=Lohit Punjabi
++sansserif.italic.tamil=Lohit Tamil
++sansserif.italic.telugu=Lohit Telugu
++sansserif.italic.sinhala=LKLUG
+ 
+-sansserif.bolditalic.latin-1=DejaVu LGC Sans Bold Oblique
++sansserif.bolditalic.latin-1=DejaVu Sans Bold Oblique
+ sansserif.bolditalic.japanese-x0208=Sazanami Gothic
+ sansserif.bolditalic.korean=Baekmuk Gulim
+ sansserif.bolditalic.chinese-big5=AR PL ShanHeiSun Uni
+ sansserif.bolditalic.chinese-gb18030=AR PL ShanHeiSun Uni
++sansserif.bolditalic.bengali=Lohit Bengali
++sansserif.bolditalic.gujarati=Lohit Gujarati
++sansserif.bolditalic.hindi=Lohit Hindi
++sansserif.bolditalic.malayalam=Lohit Malayalam
++sansserif.bolditalic.oriya=Lohit Oriya
++sansserif.bolditalic.punjabi=Lohit Punjabi
++sansserif.bolditalic.tamil=Lohit Tamil
++sansserif.bolditalic.telugu=Lohit Telugu
++sansserif.bolditalic.sinhala=LKLUG
+ 
+-
+-serif.plain.latin-1=DejaVu LGC Serif
++serif.plain.latin-1=DejaVu Serif
+ serif.plain.japanese-x0208=Sazanami Mincho
+ serif.plain.korean=Baekmuk Batang
+ serif.plain.chinese-big5=AR PL ZenKai Uni
+ serif.plain.chinese-gb18030=AR PL ZenKai Uni
++serif.plain.bengali=Lohit Bengali
++serif.plain.gujarati=Lohit Gujarati
++serif.plain.hindi=Lohit Hindi
++serif.plain.malayalam=Lohit Malayalam
++serif.plain.oriya=Lohit Oriya
++serif.plain.punjabi=Lohit Punjabi
++serif.plain.tamil=Lohit Tamil
++serif.plain.telugu=Lohit Telugu
++serif.plain.sinhala=LKLUG
+ 
+-serif.bold.latin-1=DejaVu LGC Serif Bold
++serif.bold.latin-1=DejaVu Serif Bold
+ serif.bold.japanese-x0208=Sazanami Mincho
+ serif.bold.korean=Baekmuk Batang
+ serif.bold.chinese-big5=AR PL ZenKai Uni
+ serif.bold.chinese-gb18030=AR PL ZenKai Uni
++serif.bold.bengali=Lohit Bengali
++serif.bold.gujarati=Lohit Gujarati
++serif.bold.hindi=Lohit Hindi
++serif.bold.malayalam=Lohit Malayalam
++serif.bold.oriya=Lohit Oriya
++serif.bold.punjabi=Lohit Punjabi
++serif.bold.tamil=Lohit Tamil
++serif.bold.telugu=Lohit Telugu
++serif.bold.sinhala=LKLUG
+ 
+-serif.italic.latin-1=DejaVu LGC Serif Oblique
++serif.italic.latin-1=DejaVu Serif Oblique
+ serif.italic.japanese-x0208=Sazanami Mincho
+ serif.italic.korean=Baekmuk Batang
+ serif.italic.chinese-big5=AR PL ZenKai Uni
+ serif.italic.chinese-gb18030=AR PL ZenKai Uni
++serif.italic.bengali=Lohit Bengali
++serif.italic.gujarati=Lohit Gujarati
++serif.italic.hindi=Lohit Hindi
++serif.italic.malayalam=Lohit Malayalam
++serif.italic.oriya=Lohit Oriya
++serif.italic.punjabi=Lohit Punjabi
++serif.italic.tamil=Lohit Tamil
++serif.italic.telugu=Lohit Telugu
++serif.italic.sinhala=LKLUG
+ 
+-serif.bolditalic.latin-1=DejaVu LGC Serif Bold Oblique
++serif.bolditalic.latin-1=DejaVu Serif Bold Oblique
+ serif.bolditalic.japanese-x0208=Sazanami Mincho
+ serif.bolditalic.korean=Baekmuk Batang
+ serif.bolditalic.chinese-big5=AR PL ZenKai Uni
+ serif.bolditalic.chinese-gb18030=AR PL ZenKai Uni
++serif.bolditalic.bengali=Lohit Bengali
++serif.bolditalic.gujarati=Lohit Gujarati
++serif.bolditalic.hindi=Lohit Hindi
++serif.bolditalic.malayalam=Lohit Malayalam
++serif.bolditalic.oriya=Lohit Oriya
++serif.bolditalic.punjabi=Lohit Punjabi
++serif.bolditalic.tamil=Lohit Tamil
++serif.bolditalic.telugu=Lohit Telugu
++serif.bolditalic.sinhala=LKLUG
+ 
+-
+-monospaced.plain.latin-1=DejaVu LGC Sans Mono
++monospaced.plain.latin-1=DejaVu Sans Mono
+ monospaced.plain.japanese-x0208=Sazanami Gothic
+ monospaced.plain.korean=Baekmuk Gulim
+ monospaced.plain.chinese-big5=AR PL ShanHeiSun Uni
+ monospaced.plain.chinese-gb18030=AR PL ShanHeiSun Uni
++monospaced.plain.bengali=Lohit Bengali
++monospaced.plain.gujarati=Lohit Gujarati
++monospaced.plain.hindi=Lohit Hindi
++monospaced.plain.malayalam=Lohit Malayalam
++monospaced.plain.oriya=Lohit Oriya
++monospaced.plain.punjabi=Lohit Punjabi
++monospaced.plain.tamil=Lohit Tamil
++monospaced.plain.telugu=Lohit Telugu
++monospaced.plain.sinhala=LKLUG
+ 
+-monospaced.bold.latin-1=DejaVu LGC Sans Mono Bold
++monospaced.bold.latin-1=DejaVu Sans Mono Bold
+ monospaced.bold.japanese-x0208=Sazanami Gothic
+ monospaced.bold.korean=Baekmuk Gulim
+ monospaced.bold.chinese-big5=AR PL ShanHeiSun Uni
+ monospaced.bold.chinese-gb18030=AR PL ShanHeiSun Uni
++monospaced.bold.bengali=Lohit Bengali
++monospaced.bold.gujarati=Lohit Gujarati
++monospaced.bold.hindi=Lohit Hindi
++monospaced.bold.malayalam=Lohit Malayalam
++monospaced.bold.oriya=Lohit Oriya
++monospaced.bold.punjabi=Lohit Punjabi
++monospaced.bold.tamil=Lohit Tamil
++monospaced.bold.telugu=Lohit Telugu
++monospaced.bold.sinhala=LKLUG
+ 
+-monospaced.italic.latin-1=DejaVu LGC Sans Mono Oblique
++monospaced.italic.latin-1=DejaVu Sans Mono Oblique
+ monospaced.italic.japanese-x0208=Sazanami Gothic
+ monospaced.italic.korean=Baekmuk Gulim
+ monospaced.italic.chinese-big5=AR PL ShanHeiSun Uni
+ monospaced.italic.chinese-gb18030=AR PL ShanHeiSun Uni
++monospaced.italic.bengali=Lohit Bengali
++monospaced.italic.gujarati=Lohit Gujarati
++monospaced.italic.hindi=Lohit Hindi
++monospaced.italic.malayalam=Lohit Malayalam
++monospaced.italic.oriya=Lohit Oriya
++monospaced.italic.punjabi=Lohit Punjabi
++monospaced.italic.tamil=Lohit Tamil
++monospaced.italic.telugu=Lohit Telugu
++monospaced.italic.sinhala=LKLUG
+ 
+-monospaced.bolditalic.latin-1=DejaVu LGC Sans Mono Bold Oblique
++monospaced.bolditalic.latin-1=DejaVu Sans Mono Bold Oblique
+ monospaced.bolditalic.japanese-x0208=Sazanami Gothic
+ monospaced.bolditalic.korean=Baekmuk Gulim
+ monospaced.bolditalic.chinese-big5=AR PL ShanHeiSun Uni
+ monospaced.bolditalic.chinese-gb18030=AR PL ShanHeiSun Uni
++monospaced.bolditalic.bengali=Lohit Bengali
++monospaced.bolditalic.gujarati=Lohit Gujarati
++monospaced.bolditalic.hindi=Lohit Hindi
++monospaced.bolditalic.malayalam=Lohit Malayalam
++monospaced.bolditalic.oriya=Lohit Oriya
++monospaced.bolditalic.punjabi=Lohit Punjabi
++monospaced.bolditalic.tamil=Lohit Tamil
++monospaced.bolditalic.telugu=Lohit Telugu
++monospaced.bolditalic.sinhala=LKLUG
+ 
+-
+-dialoginput.plain.latin-1=DejaVu LGC Sans Mono
++dialoginput.plain.latin-1=DejaVu Sans Mono
+ dialoginput.plain.japanese-x0208=Sazanami Gothic
+ dialoginput.plain.korean=Baekmuk Gulim
+ dialoginput.plain.chinese-big5=AR PL ShanHeiSun Uni
+ dialoginput.plain.chinese-gb18030=AR PL ShanHeiSun Uni
++dialoginput.plain.bengali=Lohit Bengali
++dialoginput.plain.gujarati=Lohit Gujarati
++dialoginput.plain.hindi=Lohit Hindi
++dialoginput.plain.malayalam=Lohit Malayalam
++dialoginput.plain.oriya=Lohit Oriya
++dialoginput.plain.punjabi=Lohit Punjabi
++dialoginput.plain.tamil=Lohit Tamil
++dialoginput.plain.telugu=Lohit Telugu
++dialoginput.plain.sinhala=LKLUG
+ 
+-dialoginput.bold.latin-1=DejaVu LGC Sans Mono Bold
++dialoginput.bold.latin-1=DejaVu Sans Mono Bold
+ dialoginput.bold.japanese-x0208=Sazanami Gothic
+ dialoginput.bold.korean=Baekmuk Gulim
+ dialoginput.bold.chinese-big5=AR PL ShanHeiSun Uni
+ dialoginput.bold.chinese-gb18030=AR PL ShanHeiSun Uni
++dialoginput.bold.bengali=Lohit Bengali
++dialoginput.bold.gujarati=Lohit Gujarati
++dialoginput.bold.hindi=Lohit Hindi
++dialoginput.bold.malayalam=Lohit Malayalam
++dialoginput.bold.oriya=Lohit Oriya
++dialoginput.bold.punjabi=Lohit Punjabi
++dialoginput.bold.tamil=Lohit Tamil
++dialoginput.bold.telugu=Lohit Telugu
++dialoginput.bold.sinhala=LKLUG
+ 
+-dialoginput.italic.latin-1=DejaVu LGC Sans Mono Oblique
++dialoginput.italic.latin-1=DejaVu Sans Mono Oblique
+ dialoginput.italic.japanese-x0208=Sazanami Gothic
+ dialoginput.italic.korean=Baekmuk Gulim
+ dialoginput.italic.chinese-big5=AR PL ShanHeiSun Uni
+ dialoginput.italic.chinese-gb18030=AR PL ShanHeiSun Uni
++dialoginput.italic.bengali=Lohit Bengali
++dialoginput.italic.gujarati=Lohit Gujarati
++dialoginput.italic.hindi=Lohit Hindi
++dialoginput.italic.malayalam=Lohit Malayalam
++dialoginput.italic.oriya=Lohit Oriya
++dialoginput.italic.punjabi=Lohit Punjabi
++dialoginput.italic.tamil=Lohit Tamil
++dialoginput.italic.telugu=Lohit Telugu
++dialoginput.italic.sinhala=LKLUG
+ 
+-dialoginput.bolditalic.latin-1=DejaVu LGC Sans Mono Bold Oblique
++dialoginput.bolditalic.latin-1=DejaVu Sans Mono Bold Oblique
+ dialoginput.bolditalic.japanese-x0208=Sazanami Gothic
+ dialoginput.bolditalic.korean=Baekmuk Gulim
+ dialoginput.bolditalic.chinese-big5=AR PL ShanHeiSun Uni
+ dialoginput.bolditalic.chinese-gb18030=AR PL ShanHeiSun Uni
++dialoginput.bolditalic.bengali=Lohit Bengali
++dialoginput.bolditalic.gujarati=Lohit Gujarati
++dialoginput.bolditalic.hindi=Lohit Hindi
++dialoginput.bolditalic.malayalam=Lohit Malayalam
++dialoginput.bolditalic.oriya=Lohit Oriya
++dialoginput.bolditalic.punjabi=Lohit Punjabi
++dialoginput.bolditalic.tamil=Lohit Tamil
++dialoginput.bolditalic.telugu=Lohit Telugu
++dialoginput.bolditalic.sinhala=LKLUG
+ 
+ # Search Sequences
+ 
+@@ -161,28 +337,40 @@
+ sequence.allfonts.x-euc-jp-linux=japanese-x0208,latin-1
+ sequence.allfonts.EUC-KR=korean,latin-1
+ sequence.allfonts.GB18030=chinese-gb18030,latin-1
+-sequence.fallback=chinese-big5,chinese-gb18030,japanese-x0208,korean
++sequence.fallback=chinese-big5,chinese-gb18030,japanese-x0208,korean,bengali,gujarati,hindi,oriya,punjabi,malayalam,tamil,telugu,sinhala
  
  # Font File Names
  
@@ -34,20 +366,20 @@
 -filename.AR_PL_ZenKai_Uni=/usr/share/fonts/chinese/TrueType/ukai.ttf
 -filename.Baekmuk_Gulim=/usr/share/fonts/korean/TrueType/gulim.ttf
 -filename.Baekmuk_Batang=/usr/share/fonts/korean/TrueType/batang.ttf
-+filename.DejaVu_LGC_Sans=/usr/share/fonts/dejavu/DejaVuLGCSans.ttf
-+filename.DejaVu_LGC_Sans_Bold=/usr/share/fonts/dejavu/DejaVuLGCSans-Bold.ttf
-+filename.DejaVu_LGC_Sans_Oblique=/usr/share/fonts/dejavu/DejaVuLGCSans-Oblique.ttf
-+filename.DejaVu_LGC_Sans_Bold_Oblique=/usr/share/fonts/dejavu/DejaVuLGCSans-BoldOblique.ttf
++filename.DejaVu_Sans=/usr/share/fonts/dejavu/DejaVuSans.ttf
++filename.DejaVu_Sans_Bold=/usr/share/fonts/dejavu/DejaVuSans-Bold.ttf
++filename.DejaVu_Sans_Oblique=/usr/share/fonts/dejavu/DejaVuSans-Oblique.ttf
++filename.DejaVu_Sans_Bold_Oblique=/usr/share/fonts/dejavu/DejaVuSans-BoldOblique.ttf
 +
-+filename.DejaVu_LGC_Sans_Mono=/usr/share/fonts/dejavu/DejaVuLGCSansMono.ttf
-+filename.DejaVu_LGC_Sans_Mono_Bold=/usr/share/fonts/dejavu/DejaVuLGCSansMono-Bold.ttf
-+filename.DejaVu_LGC_Sans_Mono_Oblique=/usr/share/fonts/dejavu/DejaVuLGCSansMono-Oblique.ttf
-+filename.DejaVu_LGC_Sans_Mono_Bold_Oblique=/usr/share/fonts/dejavu/DejaVuLGCSansMono-BoldOblique.ttf
++filename.DejaVu_Sans_Mono=/usr/share/fonts/dejavu/DejaVuSansMono.ttf
++filename.DejaVu_Sans_Mono_Bold=/usr/share/fonts/dejavu/DejaVuSansMono-Bold.ttf
++filename.DejaVu_Sans_Mono_Oblique=/usr/share/fonts/dejavu/DejaVuSansMono-Oblique.ttf
++filename.DejaVu_Sans_Mono_Bold_Oblique=/usr/share/fonts/dejavu/DejaVuSansMono-BoldOblique.ttf
 +
-+filename.DejaVu_LGC_Serif=/usr/share/fonts/dejavu/DejaVuLGCSerif.ttf
-+filename.DejaVu_LGC_Serif_Bold=/usr/share/fonts/dejavu/DejaVuLGCSerif-Bold.ttf
-+filename.DejaVu_LGC_Serif_Oblique=/usr/share/fonts/dejavu/DejaVuLGCSerif-Oblique.ttf
-+filename.DejaVu_LGC_Serif_Bold_Oblique=/usr/share/fonts/dejavu/DejaVuLGCSerif-BoldOblique.ttf
++filename.DejaVu_Serif=/usr/share/fonts/dejavu/DejaVuSerif.ttf
++filename.DejaVu_Serif_Bold=/usr/share/fonts/dejavu/DejaVuSerif-Bold.ttf
++filename.DejaVu_Serif_Oblique=/usr/share/fonts/dejavu/DejaVuSerif-Oblique.ttf
++filename.DejaVu_Serif_Bold_Oblique=/usr/share/fonts/dejavu/DejaVuSerif-BoldOblique.ttf
 +
 +filename.Sazanami_Gothic=/usr/share/fonts/sazanami-fonts-gothic/sazanami-gothic.ttf
 +filename.Sazanami_Mincho=/usr/share/fonts/sazanami-fonts-mincho/sazanami-mincho.ttf
@@ -55,3 +387,15 @@
 +filename.AR_PL_ZenKai_Uni=/usr/share/fonts/cjkunifonts-ukai/ukai.ttf
 +filename.Baekmuk_Gulim=/usr/share/fonts/baekmuk-ttf-gulim/gulim.ttf
 +filename.Baekmuk_Batang=/usr/share/fonts/baekmuk-ttf-batang/batang.ttf
++
++filename.Lohit_Bengali=/usr/share/fonts/lohit-bengali/lohit_bn.ttf
++filename.Lohit_Gujarati=/usr/share/fonts/lohit-gujarati/lohit_gu.ttf
++filename.Lohit_Hindi=/usr/share/fonts/lohit-hindi/lohit_hi.ttf
++filename.Lohit_Kannda=/usr/share/fonts/lohit-kannada/lohit_kn.ttf
++filename.Lohit_Malayalam=/usr/share/fonts/lohit-malayalam/lohit_ml.ttf
++filename.Lohit_Oriya=/usr/share/fonts/lohit-oriya/lohit_or.ttf
++filename.Lohit_Punjabi=/usr/share/fonts/lohit-punjabi/lohit_pa.ttf
++filename.Lohit_Tamil=/usr/share/fonts/lohit-tamil/lohit_ta.ttf
++filename.Lohit_Telugu=/usr/share/fonts/lohit-telugu/lohit_te.ttf
++filename.LKLUG=/usr/share/fonts/lklug/lklug.ttf
++
